--- a/Aula5_mesa_de_trabalho/index.html
+++ b/Aula5_mesa_de_trabalho/index.html
@@ -14,7 +14,7 @@
 
   <h1 class="felinos">A família dos felinos</h1>
 
-  <button id="dark-mode-toggle">Alternar Modo Escuro</button>
+  <button id="btn">Alternar Modo Escuro</button>
   
   <div class="container">
     <div class="item">
