--- a/Aula5_mesa_de_trabalho/index.html
+++ b/Aula5_mesa_de_trabalho/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <script src="./mesa.js" defer></script>
+  <script src="./populate.js"defer></script>
   <title>Aula 5 - Modificar elementos com JS </title>
 </head>
 
@@ -16,8 +17,8 @@
 
   <button id="btn">Alternar Modo Escuro</button>
   
-  <div class="container">
-    <div class="item">
+  <div class="container" id="postContainer">
+    <!-- <div class="item">
       <img src="./imagens/tiger.jpg">
       <h2>O tigre</h2>
       <p>
@@ -79,7 +80,7 @@
         do mundo, atingindo uma velocidade máxima de 115 km/h em corridas de até quinhentos metros.
       </p>
     </div>
-  </div>
+  </div> -->
 
 </body>
 
